Carga un sprite

--- a/proj.win32/HelloCocos.vcxproj.filters
+++ b/proj.win32/HelloCocos.vcxproj.filters
@@ -12,34 +12,38 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>win32</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\AppDelegate.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\HelloWorldScene.cpp">
+    <ClCompile Include="..\Classes\Level1.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="MiEscena.cpp">
-      <Filter>win32</Filter>
+      <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="Menus.cpp" />
+    <ClCompile Include="Menus.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="main.h">
-      <Filter>win32</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\AppDelegate.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\HelloWorldScene.h">
+    <ClInclude Include="..\Classes\Level1.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="main.h">
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="MiEscena.h">
-      <Filter>win32</Filter>
+      <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="Menus.h" />
+    <ClInclude Include="Menus.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="game.rc">
