--- a/proj.win32/HelloCocos.vcxproj.filters
+++ b/proj.win32/HelloCocos.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Menus.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="KeyboardTest.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h">
@@ -42,6 +45,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="Menus.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="KeyboardTest.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
