Toda la tarde persiguiendo un bug >.<
Pero se pueden matar marcianos

--- a/proj.win32/HelloCocos.vcxproj
+++ b/proj.win32/HelloCocos.vcxproj
@@ -148,6 +148,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Sources\Bala.cpp" />
     <ClCompile Include="..\Sources\Enemigo.cpp" />
     <ClCompile Include="..\Sources\Game.cpp" />
+    <ClCompile Include="..\Sources\Horda.cpp" />
     <ClCompile Include="..\Sources\Jugador.cpp" />
     <ClCompile Include="..\Sources\KeyboardTest.cpp" />
     <ClCompile Include="..\Sources\Level1.cpp" />
@@ -161,6 +162,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Sources\Bala.h" />
     <ClInclude Include="..\Sources\Enemigo.h" />
     <ClInclude Include="..\Sources\Game.h" />
+    <ClInclude Include="..\Sources\Horda.h" />
     <ClInclude Include="..\Sources\Jugador.h" />
     <ClInclude Include="..\Sources\KeyboardTest.h" />
     <ClInclude Include="..\Sources\Level1.h" />
