--- a/proj.win32/HelloCocos.vcxproj
+++ b/proj.win32/HelloCocos.vcxproj
@@ -156,6 +156,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Sources\Menus.cpp" />
     <ClCompile Include="..\Sources\MiEscena.cpp" />
     <ClCompile Include="..\Sources\PolyspriteTest.cpp" />
+    <ClCompile Include="..\Sources\Pool.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Sources\AppDelegate.h" />
@@ -170,6 +171,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Sources\Menus.h" />
     <ClInclude Include="..\Sources\MiEscena.h" />
     <ClInclude Include="..\Sources\PolyspriteTest.h" />
+    <ClInclude Include="..\Sources\Pool.h" />
     <ClInclude Include="..\Sources\resource.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
