--- a/proj.win32/HelloCocos.vcxproj
+++ b/proj.win32/HelloCocos.vcxproj
@@ -146,19 +146,15 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
   <ItemGroup>
     <ClCompile Include="..\Sources\AppDelegate.cpp" />
     <ClCompile Include="..\Sources\Bala.cpp" />
-    <ClCompile Include="..\Sources\Enemigo.cpp" />
-    <ClCompile Include="..\Sources\Escudo.cpp" />
+    <ClCompile Include="..\Sources\Enemy.cpp" />
     <ClCompile Include="..\Sources\Game.cpp" />
     <ClCompile Include="..\Sources\GameActor.cpp" />
     <ClCompile Include="..\Sources\SpaceInvaders.cpp" />
     <ClCompile Include="..\Sources\InputComponent.cpp" />
-    <ClCompile Include="..\Sources\Jugador.cpp" />
     <ClCompile Include="..\Sources\KeyboardTest.cpp" />
     <ClCompile Include="..\Sources\Level.cpp" />
-    <ClCompile Include="..\Sources\Level1.cpp" />
     <ClCompile Include="..\Sources\main.cpp" />
     <ClCompile Include="..\Sources\Menus.cpp" />
-    <ClCompile Include="..\Sources\MiEscena.cpp" />
     <ClCompile Include="..\Sources\Player.cpp" />
     <ClCompile Include="..\Sources\PolyspriteTest.cpp" />
     <ClCompile Include="..\Sources\Pool.cpp" />
@@ -168,23 +164,18 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
   <ItemGroup>
     <ClInclude Include="..\Sources\AppDelegate.h" />
     <ClInclude Include="..\Sources\Bala.h" />
-    <ClInclude Include="..\Sources\Enemigo.h" />
-    <ClInclude Include="..\Sources\Escudo.h" />
+    <ClInclude Include="..\Sources\Enemy.h" />
     <ClInclude Include="..\Sources\Game.h" />
     <ClInclude Include="..\Sources\GameActor.h" />
     <ClInclude Include="..\Sources\SpaceInvaders.h" />
     <ClInclude Include="..\Sources\InputComponent.h" />
-    <ClInclude Include="..\Sources\Jugador.h" />
     <ClInclude Include="..\Sources\KeyboardTest.h" />
     <ClInclude Include="..\Sources\Level.h" />
-    <ClInclude Include="..\Sources\Level1.h" />
     <ClInclude Include="..\Sources\main.h" />
     <ClInclude Include="..\Sources\Menus.h" />
-    <ClInclude Include="..\Sources\MiEscena.h" />
     <ClInclude Include="..\Sources\Player.h" />
     <ClInclude Include="..\Sources\PolyspriteTest.h" />
     <ClInclude Include="..\Sources\Pool.h" />
-    <ClInclude Include="..\Sources\resource.h" />
     <ClInclude Include="..\Sources\Weapon.h" />
     <ClInclude Include="C:\Users\ignacio\Documents\Visual Studio 2015\Projects\HelloCocos\Sources\Testz.h" />
     <ClInclude Include="resource.h" />
