--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ a.bat
 backup.cmd
 Resources-Texturepacker
 *.tps
+README.md
 
 # OSX - https://github.com/github/gitignore/blob/master/Global/OSX.gitignore
 .DS_Store
