--- a/Resources/physicscollision.plist
+++ b/Resources/physicscollision.plist
@@ -38,9 +38,9 @@
                         <key>density</key>
                         <real>1</real>
                         <key>restitution</key>
-                        <real>0.20000000298023224</real>
+                        <real>0.2</real>
                         <key>friction</key>
-                        <real>0.699999988079071</real>
+                        <real>0.7</real>
                         <key>tag</key>
                         <integer>0</integer>
                         <key>group</key>
@@ -1475,58 +1475,9 @@
                         <key>polygons</key>
                         <array>
                             <array>
-                                <string>{ 48.00000,-49.00000 }</string>
-                                <string>{ 39.00000,-84.00000 }</string>
-                                <string>{ 32.00000,-46.00000 }</string>
-                                <string>{ 33.00000,-27.00000 }</string>
-                                <string>{ 45.00000,-29.00000 }</string>
-                            </array>
-                            <array>
-                                <string>{ -34.00000,-27.00000 }</string>
-                                <string>{ -29.00000,-80.00000 }</string>
-                                <string>{ -38.00000,-83.00000 }</string>
-                                <string>{ -46.00000,-49.00000 }</string>
-                                <string>{ -44.00000,-30.00000 }</string>
-                            </array>
-                            <array>
-                                <string>{ -20.00000,-65.00000 }</string>
-                                <string>{ -28.00000,-45.00000 }</string>
-                                <string>{ 27.00000,-46.00000 }</string>
-                                <string>{ 18.00000,-68.00000 }</string>
-                                <string>{ 7.00000,-76.00000 }</string>
-                                <string>{ -9.00000,-75.00000 }</string>
-                            </array>
-                            <array>
-                                <string>{ 33.00000,-27.00000 }</string>
-                                <string>{ -34.00000,-27.00000 }</string>
-                                <string>{ -36.00000,-12.00000 }</string>
-                                <string>{ -31.00000,6.00000 }</string>
-                                <string>{ 12.00000,47.00000 }</string>
-                                <string>{ 32.00000,5.00000 }</string>
-                                <string>{ 37.00000,-12.00000 }</string>
-                            </array>
-                            <array>
-                                <string>{ 32.00000,-46.00000 }</string>
-                                <string>{ 39.00000,-84.00000 }</string>
-                                <string>{ 30.00000,-78.00000 }</string>
-                            </array>
-                            <array>
-                                <string>{ 4.00000,79.00000 }</string>
-                                <string>{ 12.00000,47.00000 }</string>
-                                <string>{ -12.00000,47.00000 }</string>
-                                <string>{ -4.00000,79.00000 }</string>
-                            </array>
-                            <array>
-                                <string>{ 12.00000,47.00000 }</string>
-                                <string>{ -31.00000,6.00000 }</string>
-                                <string>{ -12.00000,47.00000 }</string>
-                            </array>
-                            <array>
-                                <string>{ 33.00000,-27.00000 }</string>
-                                <string>{ 32.00000,-46.00000 }</string>
-                                <string>{ -28.00000,-45.00000 }</string>
-                                <string>{ -32.00000,-44.00000 }</string>
-                                <string>{ -34.00000,-27.00000 }</string>
+                                <string>{ -46.00000,-52.00000 }</string>
+                                <string>{ 1.00000,80.00000 }</string>
+                                <string>{ 47.00000,-52.00000 }</string>
                             </array>
                         </array>
                         
